fixed some layout problems

--- a/src/components/QuoteBox/QuoteBox.css
+++ b/src/components/QuoteBox/QuoteBox.css
@@ -1,7 +1,7 @@
 
 .citate{
     position:relative;
-    top:-230px;
+    top:-250px;
     left:-30px;
     background-image: url(../../assets/cit.png);
     background-position: center;
